--- a/render.yaml
+++ b/render.yaml
@@ -4,6 +4,6 @@ services:
     name: your-service-name
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn DevTest.wsgi
+    startCommand: gunicorn DevTest.DevTest.wsgi
     env:
-      DJANGO_SETTINGS_MODULE: DevTest.settings
+      DJANGO_SETTINGS_MODULE: DevTest.DevTest.settings
