--- a/render.yaml
+++ b/render.yaml
@@ -12,7 +12,7 @@ services:
 version: 1
 services:
   - type: web
-    name: your-service-name
+    name: test
     env: python
     buildCommand: pip install -r requirements.txt
     startCommand: gunicorn DevTest.DevTest.wsgi
